--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <p>People Entered: </p>
         <p id = "count-display"> 0 </p>
-        <button id = "increment-button" onclick = "increment()">INCREMENT</button>
+        <button id = "increment-button" onclick = "increment()"><p>INCREMENT</p></button>
         <button id = "decrement-button" onclick = "decrement()">DECREMENT</button>
         <button id = "back-to-zero" onclick = "backtozero()">Back to ZERO</button>
         <button id = "save-button" onclick = "save()">SAVE</button>
